# oslo.messaging

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  amqp1-requirements.txt  bandit.yaml  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements-py3.txt  requirements.txt  setup-test-env-amqp1.sh  setup-test-env-kafka.sh  setup-test-env-pika.sh  setup-test-env-qpid.sh  setup-test-env-rabbit.sh  setup-test-env-zmq-direct-dynamic.sh  setup-test-env-zmq-direct-static.sh  setup-test-env-zmq-proxy.sh  setup-test-env-zmq-pub-sub.sh  setup-test-env-zmq.sh  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/messaging/: changes.txt  notes.txt  test-blocking.py  test-eventlet.py  test-rabbit-client.py  test-rabbit-server.py
doc/source/: AMQP1.0.rst  FAQ.rst  conf.py  conffixture.rst  drivers.rst  exceptions.rst  executors.rst  index.rst  notification_driver.rst  notification_listener.rst  notifier.rst  opts.rst  pika_driver.rst  rpcclient.rst  serializer.rst  server.rst  supported-messaging-drivers.rst  target.rst  transport.rst  zmq_driver.rst
etc/: routing_notifier.yaml.sample
oslo/: __init__.py
oslo.messaging/locale/: oslo.messaging-log-critical.pot  oslo.messaging-log-error.pot  oslo.messaging-log-info.pot  oslo.messaging-log-warning.pot  oslo.messaging.pot
oslo/messaging/: __init__.py  _i18n.py  _urls.py  _utils.py  conffixture.py  exceptions.py  localcontext.py  opts.py  serializer.py  server.py  target.py  transport.py
oslo_messaging/: __init__.py  _i18n.py  _utils.py  conffixture.py  dispatcher.py  exceptions.py  localcontext.py  opts.py  serializer.py  server.py  target.py  transport.py  version.py
oslo_messaging/_cmd/: zmq_broker.py  zmq_proxy.py  zmq_receiver.py
oslo_messaging/_drivers/: amqp.py  amqpdriver.py  base.py  common.py  impl_amqp1.py  impl_fake.py  impl_kafka.py  impl_pika.py  impl_qpid.py  impl_rabbit.py  impl_zmq.py  kafka_options.py  matchmaker.py  matchmaker_redis.py  matchmaker_ring.py  pool.py
oslo_messaging/_executors/: base.py  impl_aioeventlet.py  impl_blocking.py  impl_eventlet.py  impl_pooledexecutor.py  impl_thread.py
oslo_messaging/_metrics/: __init__.py  client.py
oslo_messaging/hacking/: checks.py
oslo_messaging/locale/: oslo_messaging-log-error.pot  oslo_messaging-log-info.pot  oslo_messaging-log-warning.pot  oslo_messaging.pot
oslo_messaging/notify/: __init__.py  _impl_log.py  _impl_messaging.py  _impl_noop.py  _impl_routing.py  _impl_test.py  dispatcher.py  filter.py  listener.py  log_handler.py  logger.py  messaging.py  middleware.py  notifier.py
oslo_messaging/rpc/: __init__.py  client.py  dispatcher.py  server.py  transport.py
oslo_messaging/tests/: __init__.py  test_amqp_driver.py  test_config_opts_proxy.py  test_exception_serialization.py  test_expected_exceptions.py  test_fixture.py  test_opts.py  test_serializer.py  test_target.py  test_transport.py  test_urls.py  test_utils.py  utils.py
playbooks/oslo.messaging-devstack-full/: post.yaml  pre.yaml  run.yaml
playbooks/oslo.messaging-src-dsvm-full-amqp1-dual-centos-7/: run.yaml
playbooks/oslo.messaging-src-dsvm-full-amqp1-hybrid/: run.yaml
playbooks/oslo.messaging-src-dsvm-full-kafka-default/: run.yaml
playbooks/oslo.messaging-src-dsvm-full-kafka-default-centos-7/: run.yaml
playbooks/oslo.messaging-src-dsvm-full-pika-default/: run.yaml
playbooks/oslo.messaging-src-dsvm-full-rabbit-default/: run.yaml
playbooks/oslo.messaging-src-dsvm-full-zmq-default/: run.yaml
playbooks/oslo.messaging-src-grenade-dsvm/: run.yaml
playbooks/oslo.messaging-src-grenade-dsvm-multinode/: run.yaml
playbooks/oslo.messaging-telemetry-dsvm-integration-amqp1/: run.yaml
playbooks/oslo.messaging-telemetry-dsvm-integration-kafka/: run.yaml
playbooks/oslo.messaging-telemetry-dsvm-integration-pika/: run.yaml
playbooks/oslo.messaging-telemetry-dsvm-integration-rabbit/: run.yaml
playbooks/oslo.messaging-telemetry-dsvm-integration-zmq/: run.yaml
playbooks/oslo.messaging-tempest-neutron-dsvm-src-amqp1-hybrid/: run.yaml
playbooks/oslo.messaging-tempest-neutron-dsvm-src-kafka-default/: run.yaml
playbooks/oslo.messaging-tempest-neutron-dsvm-src-pika-default/: run.yaml
playbooks/oslo.messaging-tempest-neutron-dsvm-src-rabbit-default/: run.yaml
playbooks/oslo.messaging-tempest-neutron-dsvm-src-zmq-default/: run.yaml
releasenotes/notes/: RPC-call-monitoring-7977f047d069769a.yaml  add-enable_cancel_on_failover-22ac472b93dd3a23.yaml  add-ping-endpoint.yaml  add-quorum-control-configurations-beed79811ff97ba2.yaml  add-ssl-support-for-kafka.yaml  add_reno-3b4ae0789e9c45b4.yaml  adding_support_for_quorum_queues-3101d055b492289e.yaml  allow-transient-no-expire-ce7ae9d8c9d15751.yaml  amqp-tls-issue-7e6cc523e267f336.yaml  auto-deleted-failed-quorum-ca6a3923c3ed999a.yaml  avoid-quorum-deletion-ec5fede2d4ecb001.yaml  blocking-executor-deprecated-895146c1c3bf2f51.yaml  blocking-executor-support-dropped-a3bc74c6825863f0.yaml  bug-1917645-rabbit-use-retry-parameter-for-notifications-3f7c508ab4437579.yaml  bug-1981093-kafka-dont-log-in-tpool-execute-fa50ceee2d55ebae.yaml  bug-1993149-e8b231791b65e938.yaml  bug-2068630-6ff92f213bc4eca0.yaml  bug-2098714-d55094fa4fbb3178.yaml  bug-2131652-70af38c59a65886e.yaml  bump-amqp-version-due-to-tls-issue-e877b152eb101c15.yaml  (+46 more)
tests/: __init__.py  test_amqp_driver.py  test_exception_serialization.py  test_executor.py  test_expected_exceptions.py  test_log_handler.py  test_notifier.py  test_notifier_logger.py  test_notify_dispatcher.py  test_notify_listener.py  test_opts.py  test_pool.py  test_qpid.py  test_rabbit.py  test_rpc_client.py  test_rpc_dispatcher.py  test_rpc_server.py  test_target.py  test_transport.py  test_urls.py  test_utils.py  test_warning.py  utils.py
tests/rpc/: test_client.py  (+2 more)
tools/: functions.sh  messages_length.yaml  run_cross_tests.sh  setup-scenario-env.sh  setup-test-env-amqp1.sh  simulator.py  test-setup.sh  tox_install.sh
(+286 files in other folders)
